plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.example'
version = '0.0.1'

bootJar {
    archiveBaseName.set("toleave-be")   // 파일명 prefix
    archiveVersion.set("0.0.1")         // 버전 정보 (파일 명에 표시됨)
    archiveClassifier.set("")           // 부가 분류 제거
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudGcpVersion', "5.7.0")
    set('springCloudVersion', "2023.0.3")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.apache.commons:commons-text:1.10.0'

    // WebClient를 사용하기 위한 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'io.jsonwebtoken:jjwt:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // springboot 2.x버전때 쓰던 gcp버전 제거
//    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8.RELEASE'

    implementation 'com.google.cloud:google-cloud-storage:2.26.0'
    implementation 'com.google.api-client:google-api-client:1.33.4'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'

    implementation 'org.springframework.boot:spring-boot-starter-webflux' //webclient
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    // websocket + STOMP
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Jackson XML 의존성 추가
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    // Min 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ✅ QueryDSL (Jakarta 버전)
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"


    dependencyManagement {
        imports {
            mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["-parameters"]
}


// QueryDSL QClass gen path
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = querydslDir
}

sourceSets {
    main.java.srcDirs += querydslDir
}